Additional jvm option analysis.